--- a/src/App.css
+++ b/src/App.css
@@ -9,83 +9,29 @@
   margin: 0 auto;
   padding: 15px;
 }
-.main {
-  width: 40%;
-  margin-top: 5px;
-  float: left;
+.product-container{
+  display: flex;
+  gap: 4rem;
 }
-
-.main div {
-  margin-left: 40px;
-  margin-top: 30px;
+.product-container .text{
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
-
-.mySlides {
-  display: none;
+ .row{
+  display: flex;
 }
-
+.column{
+  width: 20%;
+}
+.column img{
+width: 100%;
+}
 .cursor {
   cursor: pointer;
 }
 
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
 
-/*  Position the "next button to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* on hover, add a black background color with a little bit see-through */
-
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* .caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-} */
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 9%;
-  margin-right: 10px;
-}
 
 /* Add a transparency effect for thumnbail images */
 .demo {
@@ -96,19 +42,6 @@
 .demo:hover {
   opacity: 1;
 }
-
-.text {
-  float: left;
-  width: 40%;
-  margin-left: 20px;
-  /* width: 50%; */
-  /* align-items:flex-end; */
-}
-.affect {
-  margin-left: 100px;
-  margin-top: 30px;
-}
-
 .affect h4 {
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
@@ -254,28 +187,54 @@ body {
 .footer {
   background-color: #f5f5f6;
   padding: 10rem;
-}
-.footer__elements {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.footer__elements--columns {
-  list-style-type: none;
-}
-.footer__elements--columns--items {
-  background-color: orangered;
-}
-.footer__elements--columns--items--head {
-  font-weight: 800;
-  margin-bottom: 4rem;
-  margin-right: 4rem;
-  font-size: 1.6rem;
-}
-.footer__elements--columns--items--sub {
-  margin-bottom: 2rem;
-}
+  flex-direction: column;
+  justify-content: space-between; }
+  .footer__elements {
+    display: flex;
+    justify-content: center;
+    margin-top: 8rem;
+    margin-left: 8rem; }
+    .footer__elements--columns {
+      display: flex;
+      flex-direction: column;
+      list-style-type: none;
+      margin-bottom: 3rem;
+      padding: 0 10rem 0 0; }
+      .footer__elements--columns--items--head {
+        font-weight: 800;
+        margin-bottom: 2.4rem;
+        font-size: 1.6rem; }
+        .footer__elements--columns--items--head--form {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 1rem; }
+          .footer__elements--columns--items--head--form--input {
+            padding: 1rem 4rem;
+            outline: none;
+            border: none;
+            font-family: inherit; }
+          .footer__elements--columns--items--head--form--icon {
+            background-color: #fadd18;
+            padding: 1.4rem;
+            margin-left: .5rem; }
+      .footer__elements--columns--items--sub {
+        margin-bottom: 1.6rem;
+        font-size: 1.4rem;
+        display: flex; }
+        .footer__elements--columns--items--sub--social {
+          background-color: #000;
+          padding: 0.5rem;
+          margin: 0rem 0.5rem; }
+  .footer__down {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .footer__down--left {
+      font-size: 1.2rem;
+      margin-left: -5rem; }
+
 
 .header {
   color: #fff;
@@ -597,7 +556,7 @@ body {
 }
 .otherCollections__container--cards {
   /* width: 42.9rem; */
-  min-height: 24rem; 
+  min-height: 27rem; 
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
